--- a/public/src/app/new-todoit/new-task.component.html
+++ b/public/src/app/new-todoit/new-task.component.html
@@ -1,22 +1,35 @@
 <body>
+    <div class="stuff">
+
+        <h1>Create a TodoiT</h1>
+        <form (submit)="addTask()">
+            <div class="row">
+                <p class="col-2">TodoiT: </p>
+                <input class="col-3" type="text" name="newTask.title" [(ngModel)]="newTask.title">
+            </div>
     
-    <h1>Create a TodoiT</h1>
-    <form (submit)="addTask()">
-        <!-- <p class="small text-danger" >{{ err?.task?.message }}</p> -->
-        <p>TodoiT: </p>
-        <input type="text" name="newTask.title" [(ngModel)]="newTask.title">
-
-        <p>Task:</p>
-        <input type="text" name="newTask.task" [(ngModel)]="newTask.task">
-
-        <p>TodoiT By: </p>
-        <input type="date" name="newTask.date" [(ngModel)]="newTask.date">
-
-        <p>Details: </p>
-        <input type="text" name="newTask.details" [(ngModel)]="newTask.details">
+            <div class="row">
                 
-        <button class="btn btn-dark" type="submit">Create TodoiT</button>
-
-    </form>
+                <p class="col-2">Task:</p>
+                <input class="col-3" type="text" name="newTask.task" [(ngModel)]="newTask.task">
+            </div>
+    
+            <div class="row">
+    
+                <p class="col-2">TodoiT By: </p>
+                <input class="col-3" type="date" name="newTask.date" [(ngModel)]="newTask.date">
+            </div>
+    
+            <div class="row">
+                
+                <p class="col-2">Details: </p>
+                <input class="col-3" type="text" name="newTask.details" [(ngModel)]="newTask.details">
+            </div>
+            <br>
+            <button class="btn btn-dark" type="submit">Create TodoiT</button>
+    
+        </form>
+        
+    </div>
 
 </body>
